# Search_engine_cmake

./: CMakeLists.txt  README.md
headers/: Search_engine_cmake.h
src/: CmakeLists.txt  Search_engine_cmake.cpp  main.cpp  realization_classes.cpp
tests/: test.cpp
